--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/css/styles.css"/>
     <title>/picker</title>
+  <link rel="icon" href="https://cdn.discordapp.com/emojis/433693576036352024.webp?size=128&quality=lossless"/>
   </head>
   <body>
     <div class="container">
