--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="/css/picker.css"/>
+    <link rel="stylesheet" href="picker.css"/>
     <title>/picker</title>
   <link rel="icon" href="https://cdn.discordapp.com/emojis/433693576036352024.webp?size=128&quality=lossless"/>
   </head>
@@ -14,6 +14,6 @@
       <div id="tags"></div>
     </div>
 
-    <script src="/js/picker.js"></script>
+    <script src="picker.js"></script>
   </body>
 </html>
